--- a/frame.html
+++ b/frame.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./css/miniP.css">
     <link rel="stylesheet" type="text/css" href="./css/nav.css">
     <link rel="stylesheet" type="text/css" href="./css/frame.css">
 </head>
@@ -21,11 +20,17 @@
             경우에 따라서는 이 frame을 바꾸어야할 수 있습니다.<br>
         </div>
     </div>
+
+    <div id="upDownBtn">
+        <a href="#"><button id="upBtn">위로</button></a>
+        <a href="#bottom"><button id="downBtn">아래</button></a>
+    </div>
+
     <footer></footer>
+    <div id="bottom"></div>
 </body>
 
 <script src="http://code.jQuery.com/jquery-3.7.1.min.js"></script>
-<script src="./js/miniP.js"></script>
-<script src="./js/mypage.js"></script>
+<script src="./js/frame.js"></script>
 
 </html>
