--- a/nav.html
+++ b/nav.html
@@ -11,6 +11,8 @@
     <ul id="nadeuliNav">
         <li>홈</li><br>
 
+        <li><a href="#">지도</a></li><br>
+
         <li>여행지
             <ul class="nav-content">
                 <li><a href="#">테마별 여행지</a></li><br>
@@ -20,8 +22,9 @@
         
             <li>후기
             <ul class="nav-content">
-                <li><a href="#">여행 후기</a></li><br>
-                <li><a href="#">블로그 후기</a></li><br>
+                <li><a href="#">글 쓰기</a></li><br>
+                <li><a href="#">글 수정</a></li><br>
+                <li><a href="#">글 삭제</a></li>
             </ul>
         </li><br>
        
@@ -39,14 +42,14 @@
         </li><br>
         <li>마이페이지
             <ul class="nav-content">
-                <li>회원정보관리
+                <li><a href="./mypage.html">회원정보관리</a>
                     <ul>
-                        <li><a href="#">회원정보 수정</a></li><br>
+                        <li><a href="./updateForm.html">회원정보 수정</a></li><br>
                         <li><a href="#">내가 쓴 글</a></li><br>
                         <li><a href="#">내가 좋아요한 글</a></li><br>
                     </ul>
                 </li><br>
-                <li>나의 일정 관리
+                <li><a href="#">나의 일정 관리</a>
                     <ul >
                         <li><a href="#">캘린더 보기</a></li><br>
                         <li><a href="#">캘린더 작성하기</a></li><br>
@@ -56,5 +59,8 @@
             </ul>
         </li>
     </ul>
+
+
 </body>
+
 </html>
